# Adventurer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: GameDesign.md  Tasks.md
engine/: CMakeLists.txt
engine/include/: adv_game.hpp
engine/include/core/: config.hpp  game.hpp  input.hpp  node.hpp  scene.hpp  scene_resource.hpp  updatable.hpp
engine/include/debug/: globaldebug.hpp
engine/include/display/: camera.hpp  display.hpp  texture.hpp  ui_node.hpp
engine/include/nodes/: entity.hpp  game_object.hpp  node.hpp  object.hpp
engine/include/objs/: collider.hpp  entity.hpp  game_object.hpp
engine/include/particles/: particle.hpp  particle_system.hpp
engine/include/utils/: color.hpp  globals.hpp  logger.hpp  point.hpp  quadtree.hpp  rect.hpp  serializable.hpp  vector2f.hpp
engine/include/world/: chunk.hpp  position.hpp  position_rect.hpp  positioned.hpp  tile_resource.hpp  world.hpp
engine/src/: adv_game.cpp
engine/src/core/: game.cpp  input.cpp  node.cpp  scene.cpp
engine/src/debug/: globaldebug.cpp
engine/src/display/: camera.cpp  display.cpp  texture.cpp
engine/src/nodes/: entity.cpp  game_object.cpp  node.cpp  object.cpp
engine/src/objs/: collider.cpp  entity.cpp  game_object.cpp
engine/src/particles/: particle_system.cpp
engine/src/utils/: globals.cpp  logger.cpp  quadtree.cpp
engine/src/world/: position.cpp  position_rect.cpp
game/: CMakeLists.txt  box.cpp  box.hpp  fire_system.cpp  fire_system.hpp  main.cpp  particle_example.cpp  particle_example.hpp  player.cpp  player.hpp  snow_system.cpp  snow_system.hpp  test_resource.hpp
tools/: CMakeLists.txt
tools/worldedit/: editor_resource.hpp  main.cpp  worldedit.hpp
tools/worldedit/components/: sidebar.cpp  sidebar.hpp  tiler.cpp  tiler.hpp  tool_selector.cpp  tool_selector.hpp
tools/worldedit/ui/: sidebar.cpp  sidebar.hpp
tools/worldedit/views/: creator.cpp  creator.hpp  editor.cpp  editor.hpp
